Bug 1393272 - Use original width and height if either the scaled width or height is 0. r=jya

MozReview-Commit-ID: 3y4c5zJZD0a